[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Yuan-Heng,Kuo <coco8802231225@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
